# docx2css

./: LICENSE  README.md  requirements.txt  setup.cfg
docx2css/: __init__.py  api.py  stylesheet.py  utils.py
docx2css/css/: serializers.py
docx2css/ooxml/: __init__.py  constants.py  ct.py  fonts.py  numbering.py  package.py  parsers.py  sections.py  simple_types.py  styles.py  tables.py  theme.py
tests/: test_font_table.py  test_numbering.py  test_sections.py  test_simple_types.py  test_styles.py  test_tables.py  test_theme.py  test_utils.py
tests/test_files/: contrat.css  contrat.docx  endos.css  endos.docx  enveloppe.css  enveloppe.docx  fax.css  fax.docx  labels.css  labels.docx  memo.css  memo.docx  no_theme.docx  paragraphs.xml  resolution.css  resolution.docx
tests/test_files/character/css/: bold_char_style.css  bold_italic_char_style.css  border_1pt_char_style.css  border_char_style.css  border_dashDotStroked_char_style.css  border_dashSmallGap_char_style.css  border_dashed_char_style.css  border_dotDash_char_style.css  border_dotDotDash_char_style.css  border_dotted_char_style.css  border_doubleWave_char_style.css  border_double_char_style.css  border_inset_char_style.css  border_nil_char_style.css  border_outset_char_style.css  border_rgb_char_style.css  border_shadow_char_style.css  border_theme_char_style.css  border_theme_darker_char_style.css  border_theme_lighter_char_style.css  border_thickThinLargeGap_char_style.css  border_thickThinMediumGap_char_style.css  border_thickThinSmallGap_char_style.css  border_thick_char_style.css  caps_char_style.css  (+100 more)
(+225 files in other folders)
