[metadata]
name = docx2css
version = 0.0.3
author = Vincent Vaillancourt
author_email = w@vincentvaillancourt.com
description = Create a CSS stylesheet using the styles of a Word (docx) document
long_description = file: README.md
long_description_content_type = text/markdown
url = https://vvail.github.io/docx2css/
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Office/Business
    Topic :: Software Development :: Libraries
    Topic :: Text Processing :: Markup

[options]
packages = find:
python_requires = >=3.10
install_requires =
    cssutils >= 2.3.0
    lxml

[options.packages.find]
exclude = tests